# ai-pr-reviewer-python

./: .env.example  .gitignore  .reviewer.yaml.example  BOOTSTRAP.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  PROJECT-PLAN.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  doc-writer.md  test-runner.md
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
docs/: LOGBOOK.md
scripts/: e2e_test.sh  test_azure_openai.py
src/reviewer/: __init__.py  config.py  exceptions.py  main.py  models.py
src/reviewer/middleware/: __init__.py  logging.py  ratelimit.py  signature.py
src/reviewer/providers/: __init__.py  base.py
src/reviewer/providers/azuredevops/: __init__.py
src/reviewer/providers/github/: client.py  review.py  webhook.py
src/reviewer/queue/: __init__.py  cancel.py  dedup.py  worker.py
src/reviewer/reviewer/: __init__.py  agent.py  orchestrator.py  pipeline.py  prompts.py  tools.py  trace.py
src/reviewer/server/: __init__.py  dependencies.py  routes.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_models.py  test_provider_protocol.py  validate.py
tests/fixtures/: __init__.py  test_rsa_key.py
tests/fixtures/github/: pull_request_opened.json  pull_request_synchronize.json
tests/fixtures/openai/: error_content_filter.json  error_rate_limit.json  final_review_response.json  multi_tool_call_response.json  streaming_final_review_chunks.json  streaming_tool_call_chunks.json  tool_call_response.json
tests/integration/: test_fixtures_integrity.py
tests/providers/: test_github_client.py  test_github_review.py  test_github_webhook.py
tests/queue/: test_cancel.py  test_dedup.py  test_worker.py
tests/reviewer/: test_agent.py  test_orchestrator.py  test_pipeline.py  test_prompts.py  test_tools.py  test_trace.py
tests/server/: test_middleware.py  test_routes.py
